@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -61,7 +61,8 @@ public class StoreClosedException extends MessagingException {
     private static final long serialVersionUID = -3145392336120082655L;
 
     /**
-     * Constructor
+     * Constructs a StoreClosedException with no detail message.
+     *
      * @param store	The dead Store object
      */
     public StoreClosedException(Store store) {
@@ -69,12 +70,29 @@ public class StoreClosedException extends MessagingException {
     }
 
     /**
-     * Constructor
+     * Constructs a StoreClosedException with the specified
+     * detail message.
+     *
      * @param store	The dead Store object
      * @param message	The detailed error message
      */
     public StoreClosedException(Store store, String message) {
 	super(message);
+	this.store = store;
+    }
+
+    /**
+     * Constructs a StoreClosedException with the specified
+     * detail message and embedded exception.  The exception is chained
+     * to this exception.
+     *
+     * @param store	The dead Store object
+     * @param message	The detailed error message
+     * @param e		The embedded exception
+     * @since		JavaMail 1.5
+     */
+    public StoreClosedException(Store store, String message, Exception e) {
+	super(message, e);
 	this.store = store;
     }
 
